--- a/.env
+++ b/.env
@@ -10,8 +10,8 @@ CONTRACT_STARTING_BOCK=16496930
 EVENT_BLOCK_BATCH=80000
 EVENT_END_BLOCK=18436820
 AAVE_V3_POOL_ADDRESS=0x87870Bca3F3fD6335C3F4ce8392D69350B4fA4E2
-MAINNET_FORKED_RPC=https://eth-mainnet.g.alchemy.com/v2/83Yr3tLIfrrv7AZ1xqYjCilxUMwy1LH1
-# MAINNET_FORKED_RPC=http://127.0.0.1:8545/
+# MAINNET_FORKED_RPC=https://eth-mainnet.g.alchemy.com/v2/83Yr3tLIfrrv7AZ1xqYjCilxUMwy1LH1
+MAINNET_FORKED_RPC=http://127.0.0.1:8545/
 
 
 
